# fusion-tools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  ROADMAP.md  installed_packages.txt  pyproject.toml  setup.py
.fusion_assets/: fusionTools_bulkLabels.js  fusionTools_default.js  fusionTools_featureAnnotation.js  fusionTools_largeSlideMap.js  fusionTools_propertyPlotter.js  fusionTools_slideMap.js
assets/: dashExtensions_default.js
docs/: conf.py  requirements.txt
docs/source/: background.rst  components_overview.rst  conf.py  datasets.rst  dsa.rst  fusion_tools.components.rst  fusion_tools.rst  fusion_tools.utils.rst  fusion_tools.visualization.rst  index.rst  intro_dash.rst  modules.rst  non_interactive.rst  visualization.rst
fusion_tools/: handler.py  visualization.py
src/fusion_tools/: __init__.py  access.py  dataset.py  feature_extraction.py  handler.py  simple_fusion.py  tileserver.py  utils.py  visualization.py
src/fusion_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fusion_tools/components/: __init__.py  annotation.py  base.py  custom.py  external.py  extractors.py  maps.py  overlays.py  plotters.py  segmentation.py  slide_annotation.py  tools.py
src/fusion_tools/database/: __init__.py  api.py  database.py  models.py
src/fusion_tools/fusion/: data_types.py  surveys.py  vis.py  welcome.py
src/fusion_tools/handler/: __init__.py  dataset_builder.py  dataset_uploader.py  dsa_handler.py  login.py  plugin.py  resource_selector.py  save_session.py  survey.py
src/fusion_tools/utils/: images.py  omics.py  shapes.py  stats.py
src/fusion_tools/visualization/: __init__.py  components.py  database.py  vis_utils.py
tests/: test_classification_model.py  test_custom_component.py  test_custom_function.py  test_dash_table_dropdowns.py  test_data_extractor.py  test_dataset_builder.py  test_dataset_classes.py  test_db.py  test_dsa_components.py  test_extract_nested_prop.py  test_extract_recursive.py  test_feature_annotation.py  test_feature_extraction.py  test_feature_visualization.py  test_features.csv  test_file_selector.py  test_format_intersecting_masks.py  test_fusion_layout.py  test_fusion_multithread.py  test_fusion_multiworker.py  test_generate_property_dict.py  test_get_gene_info.py  test_global_property_plotter.py  test_hra_viewer.py  test_image_overlay.py  test_json_stream.py  test_jupyter.ipynb  test_large_slide_maps.py  test_load_visium_csv.py  test_local.py  test_meta_embed.py  test_model_train.ipynb  test_model_train.py  test_multiframe_rgb.py  test_multiframeslidemap.py  test_multipage_layout.py  test_parse_cli_xml.py  test_path_extraction.py  test_plugin_runner.py  test_plugins.py  (+11 more)
tests/.fusion_assets/: fusionTools_default.js  fusionTools_slideMap.js
tests/test_images/: histology_annotations.json  histology_annotations.xml  histology_annotationsLayer1.geojson
tests/test_ml/: prep_training_data.py
