[project]
name = "fusion-tools"
dynamic = ["version","authors","readme","description","classifiers"]
dependencies = ["dynamic"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/spborder/fusion-tools"
Issues = "https://github.com/spborder/fusion-tools/issues"