[project]
name = "fusion-tools"
version = "3.6.36"
description = "Modular visualization and analysis dashboard creation for high-resolution microscopy images."
authors = [
    {name = "Sam Border", email = "sam.border2256@gmail.com"}
]
license = {text = "Apache Software License"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "umap-learn (>=0.5.8,<0.6.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "uuid (>=1.30,<2.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dash (>=3.1.1,<4.0.0)",
    "dash-extensions (>=2.0.4,<3.0.0)",
    "dash-leaflet (>=1.1.3,<2.0.0)",
    "dash-mantine-components (>=2.1.0,<3.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "large-image[multi,ometiff,openjpeg,openslide,pil,zarr] (>=1.32.11,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "geojson (>=3.2.0,<4.0.0)",
    "lxml (>=5.3.1)",
    "rasterio (>=1.4.3,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "anndata (>=0.11.4,<0.12.0)",
    "dash-uploader (>=0.6.1,<0.7.0)",
    "girder-client (>=3.2.8,<4.0.0)",
    "girder-job-sequence (>=0.2.7,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.build.dependencies]
build = "^1.2.2.post1"


