[project]
name = "fusion-tools"
version = "3.6.39"
description = "Modular visualization and analysis dashboard creation for high-resolution microscopy images."
authors = [
    {name = "Sam Border", email = "sam.border2256@gmail.com"}
]
license = {text = "Apache Software License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "dash (>=3.2.0,<4.0.0)",
    "dash-leaflet (>=1.1.3,<2.0.0)",
    "dash-mantine-components (>=2.3.0,<3.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "large-image[openjpeg,openslide,tifffile] (>=1.33.3,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "girder-client (>=3.2.11,<4.0.0)",
    "girder-job-sequence (>=0.2.7,<0.3.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "geojson (>=3.2.0,<4.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dash-uploader (>=0.6.1,<0.7.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.build.dependencies]
build = "^1.2.2.post1"


